<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:columnCount="2">


    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/TextStyle"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=" "
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/surnameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        style="@style/TextStyle"/>

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_surname"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/marksView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marks"
        style="@style/TextStyle"
        />

    <EditText
        android:id="@+id/marksEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_marks"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/idView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        style="@style/TextStyle"
        />

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_id"
        android:ems="10"
        android:hint="@string/enter_id"
        android:inputType="number"
        android:minHeight="48dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_marginStart="10dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addDataButton"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/add_data" />

            <Button
                android:id="@+id/viewAllButton"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/view_all" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/updateButton"
                style="@style/CustomButton"
                android:layout_width="109dp"
                android:layout_height="wrap_content"

                android:text="@string/update" />

            <Button
                android:id="@+id/deleteButton"
                style="@style/CustomButton"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/studentList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_columnSpan="2" />

</GridLayout>